--- a/.drone.yml
+++ b/.drone.yml
@@ -101,7 +101,7 @@ steps:
 - name: publish_s3_release
   image: plugins/s3
   settings:
-    bucket: sga-cliente-root
+    bucket: cumplidos-prov-cliente-root
     access_key:
       from_secret: aws_access_key_id
     secret_key:
@@ -119,7 +119,7 @@ steps:
 - name: publish_s3_master
   image: plugins/s3
   settings:
-    bucket: cumplidos-cliente-root
+    bucket: cliente-prod
     access_key:
       from_secret: aws_access_key_id
     secret_key:
