--- a/.drone.yml
+++ b/.drone.yml
@@ -65,10 +65,13 @@ steps:
     SONAR_TOKEN:
       from_secret: SONAR_TOKEN
   commands:
+    - echo "SONAR_HOST_URL=$SONAR_HOST_URL"
     - sonar-scanner \
-        -e SONAR_HOST_URL=$SONAR_HOST_URL \
-        -e SONAR_SCANNER_OPTS="-Dsonar.projectKey=Prueba" \
-        -e SONAR_LOGIN=$SONAR_TOKEN
+        -Dsonar.host.url=$SONAR_HOST_URL \
+        -Dsonar.login=$SONAR_TOKEN \
+        -Dsonar.projectKey=Prueba \
+        -Dsonar.sources=. \
+        -Dsonar.exclusions=**/node_modules/**,**/*.spec.ts,documentation/**
   when:
     branch:
     - develop
